src/objects/KB_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>KB_Globally_Visible__c</fullName>
        <label>KB Globally Visible</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KB_Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Number__c</fullName>
        <label>KB Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_PDF_File__c</fullName>
        <label>KB PDF File</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>KB_Source_File__c</fullName>
        <label>Source File</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>KB_Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Article</label>
    <pluralLabel>Articles</pluralLabel>
</CustomObject>